// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTableHeadersConfig > returns correct snapshot for type CHECKLIST 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "checklist",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": "iconAsset",
    "relatedParam": "checklistId",
    "secondaryId": "entityId",
    "text": "Checklists",
    "textKey": "entityName",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "groupById": "entityid",
    "id": "checklistgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "checklistGroupId",
    "secondaryId": "entityGroupId",
    "text": "Checklist groups",
    "textKey": "checklistGroupName",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "doneby",
    "isBold": [Function],
    "isFixed": [Function],
    "secondaryId": "doneBy",
    "text": "Done by",
    "textKey": "doneBy",
    "valueKey": "doneBy",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "totalcheckcount",
    "prependImage": null,
    "text": "Count",
    "textKey": "entityCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "headerPrependIcon": "M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z",
    "headerPrependIconColor": "#0AAC00",
    "headerPrependIconSize": 12,
    "id": "successfulcheckcount",
    "secondaryTextKey": "successfulChecksPctFormatted",
    "text": "Successful",
    "textKey": "successfulChecks",
    "type": "number",
    "valueKey": "successfulChecks",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "headerPrependIcon": "M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z",
    "headerPrependIconColor": "#F28A0D",
    "headerPrependIconSize": 12,
    "id": "unsuccessfulcheckcount",
    "secondaryTextKey": "unsuccessfulChecksPctFormatted",
    "text": "Unsuccessful",
    "textKey": "unsuccessfulChecks",
    "type": "number",
    "valueKey": "unsuccessfulChecks",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "headerPrependIcon": "M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z",
    "headerPrependIconColor": "#F44336",
    "headerPrependIconSize": 12,
    "id": "missedcheckcount",
    "secondaryTextKey": "missedChecksPctFormatted",
    "text": "Missed",
    "textKey": "missedChecks",
    "type": "number",
    "valueKey": "missedChecks",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgtime",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average time",
    "textKey": "avgTime",
    "type": "number",
    "valueKey": "avgTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "id": "mediancheckduration",
    "isDurationValue": true,
    "text": "Median time",
    "textKey": "medianCheckTime",
    "type": "number",
    "valueKey": "medianCheckTime",
    "width": "120px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type CUSTOM_REPORT 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type DOWNTIME 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "appendIconClickFn": [Function],
    "appendIconId": [Function],
    "appendIconSize": 24,
    "appendIconSrc": [Function],
    "appendIconTooltipText": "Get AI insights from extra notes",
    "defaultDirection": "asc",
    "id": "comment",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": "iconAsset",
    "relatedParam": "commentId",
    "secondaryId": "entityId",
    "style": {
      "width": "200px",
    },
    "text": "Stop reasons",
    "textKey": "entityName",
  },
  {
    "defaultDirection": "asc",
    "groupById": "entityid",
    "id": "commentgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "commentGroupId",
    "secondaryId": "entityGroupId",
    "text": "Stop groups",
    "textKey": "entityGroupName",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stoptype",
    "text": "Stop types",
    "textKey": "entitySubType",
    "type": "text",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "stoplocation",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "positionId",
    "text": "Machine locations",
    "textKey": "location",
    "type": "text",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "lotcode",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "lotCode",
    "secondaryId": "lotCode",
    "text": "LOT/Batch",
    "textKey": "lotCode",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productionorder",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "productionOrder",
    "secondaryId": "productionOrder",
    "text": "Orders",
    "textKey": "productionOrder",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "stopcount",
    "prependImage": null,
    "text": "stopcount",
    "textKey": "entityCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "notescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "idealqty",
    "text": "Loss (primary unit)",
    "textKey": "idealQtyFormatted",
    "type": "number",
    "valueKey": "idealQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "idealaltqty",
    "text": "Loss (alternative unit)",
    "textKey": "idealAltQtyFormatted",
    "type": "number",
    "valueKey": "idealAltQty",
    "width": "120px",
  },
  {
    "align": "end",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "stopduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Duration (All)",
    "textKey": "valueSec",
    "type": "number",
    "valueKey": "valueSec",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average duration",
    "textKey": "avgDuration",
    "type": "number",
    "valueKey": "avgDuration",
    "width": "150px",
  },
  {
    "align": "end",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "includedinoeestops",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Duration (incl. in OEE)",
    "textKey": "includedInOeeStops",
    "type": "number",
    "valueKey": "includedInOeeStops",
    "width": "150px",
  },
  {
    "appendText": " (Total)",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "rowplannedtime",
    "isDurationValue": true,
    "text": "plannedTime",
    "textKey": "rowPlannedTime",
    "type": "number",
    "valueKey": "rowPlannedTime",
    "width": "150px",
  },
  {
    "appendText": " (Total)",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "totalplannedtime",
    "isDurationValue": true,
    "text": "plannedTime",
    "textKey": "totalPlannedTime",
    "type": "number",
    "valueKey": "totalPlannedTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "entityPctPlannedTime",
    "text": "% of planned time",
    "textKey": "entityPctPlannedTimeLabel",
    "type": "number",
    "valueKey": "entityPctPlannedTime",
    "width": "170px",
  },
  {
    "defaultDirection": "asc",
    "id": "notes",
    "prependImage": null,
    "text": "Notes",
    "textKey": "notes",
    "type": "text",
    "width": "75px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type OEE 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "lotcode",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "lotCode",
    "secondaryId": "lotCode",
    "text": "LOT/Batch",
    "textKey": "lotCode",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productionorder",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "productionOrder",
    "secondaryId": "productionOrder",
    "text": "Orders",
    "textKey": "productionOrder",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "notescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average duration",
    "textKey": "avgDuration",
    "type": "number",
    "valueKey": "avgDuration",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "notes",
    "prependImage": null,
    "text": "Notes",
    "textKey": "notes",
    "type": "text",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "availability",
    "text": "availability",
    "textKey": "availabilityFormatted",
    "type": "number",
    "valueKey": "availability",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "technicalavailability",
    "text": "Technical availability",
    "textKey": "technicalAvailabilityFormatted",
    "type": "number",
    "valueKey": "technicalAvailability",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "performance",
    "text": "performance",
    "textKey": "performanceFormatted",
    "type": "number",
    "valueKey": "performance",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "quality",
    "text": "quality",
    "textKey": "qualityFormatted",
    "type": "number",
    "valueKey": "quality",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "oee",
    "text": "OEE",
    "textKey": "oeeFormatted",
    "type": "number",
    "valueKey": "oee",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "ooe",
    "text": "OOE",
    "textKey": "ooeFormatted",
    "type": "number",
    "valueKey": "ooe",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": false,
    "id": "teep",
    "text": "TEEP",
    "textKey": "teepFormatted",
    "type": "number",
    "valueKey": "teep",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "operatingTime",
    "isDurationValue": true,
    "secondaryTextKey": "operatingTimePctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "Operating time",
    "textKey": "operatingTime",
    "type": "number",
    "valueKey": "operatingTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "plannedtime",
    "isDurationValue": true,
    "text": "plannedTime",
    "textKey": "plannedTime",
    "type": "number",
    "valueKey": "plannedTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "shiftTime",
    "isDurationValue": true,
    "text": "Shift time",
    "textKey": "shiftTime",
    "type": "number",
    "valueKey": "shiftTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": false,
    "id": "calendarTime",
    "isDurationValue": true,
    "text": "All time",
    "textKey": "calendarTime",
    "type": "number",
    "valueKey": "calendarTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "rowproducedqty",
    "text": "Total quantity (primary unit)",
    "textKey": "rowProducedQtyFormatted",
    "type": "number",
    "valueKey": "rowProducedQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "rowproducedaltqty",
    "text": "Total quantity (alternative unit)",
    "textKey": "rowProducedAltQtyFormatted",
    "type": "number",
    "valueKey": "rowProducedAltQty",
    "width": "120px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type PRODUCTION_SPEED 1`] = `
[
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "binrange",
    "isBold": [Function],
    "isFixed": [Function],
    "prependIcon": "M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z",
    "prependIconColor": [Function],
    "prependIconSize": "17px",
    "prependImage": null,
    "text": "Range ()",
    "textKey": "rangeKey",
    "valueKey": "binOrder",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "station",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station group",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factory",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product group",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "Product",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "productionspeedcount",
    "secondaryFormatFn": [Function],
    "secondaryTextKey": "productionCount",
    "text": "Count (??)",
    "textKey": "productionCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "productiontime",
    "secondaryFormatFn": [Function],
    "secondaryTextKey": "productionTime",
    "text": "Production time",
    "textKey": "productionTime",
    "type": "number",
    "width": "75px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type QUANTITY 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "lotcode",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "lotCode",
    "secondaryId": "lotCode",
    "text": "LOT/Batch",
    "textKey": "lotCode",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productionorder",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "productionOrder",
    "secondaryId": "productionOrder",
    "text": "Orders",
    "textKey": "productionOrder",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "notescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average duration",
    "textKey": "avgDuration",
    "type": "number",
    "valueKey": "avgDuration",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "notes",
    "prependImage": null,
    "text": "Notes",
    "textKey": "notes",
    "type": "text",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "goodqty",
    "secondaryTextKey": "goodQtyPctFormatted",
    "text": "Good quantity (primary unit)",
    "textKey": "goodQtyFormatted",
    "type": "number",
    "valueKey": "goodQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "goodaltqty",
    "text": "Good quantity (alternative unit)",
    "textKey": "goodAltQtyFormatted",
    "type": "number",
    "valueKey": "goodAltQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "scrapqty",
    "secondaryTextKey": "scrapQtyPctFormatted",
    "text": "Scrap (primary unit)",
    "textKey": "scrapQtyFormatted",
    "type": "number",
    "valueKey": "scrapQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "scrapaltqty",
    "text": "Scrap (alternative unit)",
    "textKey": "scrapAltQtyFormatted",
    "type": "number",
    "valueKey": "scrapAltQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "rowproducedqty",
    "text": "Total quantity (primary unit)",
    "textKey": "rowProducedQtyFormatted",
    "type": "number",
    "valueKey": "rowProducedQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "rowproducedaltqty",
    "text": "Total quantity (alternative unit)",
    "textKey": "rowProducedAltQtyFormatted",
    "type": "number",
    "valueKey": "rowProducedAltQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "idealqty",
    "text": "idealqty (primary unit)",
    "textKey": "idealQtyFormatted",
    "type": "number",
    "valueKey": "idealQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "idealaltqty",
    "text": "idealqty (alternative unit)",
    "textKey": "idealAltQtyFormatted",
    "type": "number",
    "valueKey": "idealAltQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "performancelossqty",
    "text": "Loss – performance (primary unit)",
    "textKey": "performanceLossQtyFormatted",
    "type": "number",
    "valueKey": "performanceLossQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "performancelossaltqty",
    "text": "Loss – performance (alternative unit)",
    "textKey": "performanceLossAltQtyFormatted",
    "type": "number",
    "valueKey": "performanceLossAltQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "availabilitylossqty",
    "text": "Loss – availability (primary unit)",
    "textKey": "availabilityLossQtyFormatted",
    "type": "number",
    "valueKey": "availabilityLossQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "availabilitylossaltqty",
    "text": "Loss – availability (alternative unit)",
    "textKey": "availabilityLossAltQtyFormatted",
    "type": "number",
    "valueKey": "availabilityLossAltQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "potentialqty",
    "text": "Potential (primary unit)",
    "textKey": "potentialQtyFormatted",
    "type": "number",
    "valueKey": "potentialQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "potentialaltqty",
    "text": "Potential (alternative unit)",
    "textKey": "potentialAltQtyFormatted",
    "type": "number",
    "valueKey": "potentialAltQty",
    "width": "120px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type SCRAPREASON 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "scrapreason",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": "iconAsset",
    "relatedParam": "scrapReasonId",
    "secondaryId": "entityId",
    "style": {
      "width": "200px",
    },
    "text": "Scrap reasons",
    "textKey": "entityName",
  },
  {
    "defaultDirection": "asc",
    "groupById": "entityid",
    "id": "scrapreasongroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "scrapReasonGroupId",
    "secondaryId": "entityGroupId",
    "text": "Scrap groups",
    "textKey": "entityGroupName",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "lotcode",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "lotCode",
    "secondaryId": "lotCode",
    "text": "LOT/Batch",
    "textKey": "lotCode",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productionorder",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "productionOrder",
    "secondaryId": "productionOrder",
    "text": "Orders",
    "textKey": "productionOrder",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "notescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average duration",
    "textKey": "avgDuration",
    "type": "number",
    "valueKey": "avgDuration",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "notes",
    "prependImage": null,
    "text": "Notes",
    "textKey": "notes",
    "type": "text",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "scrapqty",
    "text": "Scrap (primary unit)",
    "textKey": "scrapQtyFormatted",
    "type": "number",
    "valueKey": "scrapQty",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "scrapaltqty",
    "text": "Scrap (alternative unit)",
    "textKey": "scrapAltQtyFormatted",
    "type": "number",
    "valueKey": "scrapAltQty",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "scrapqtypct",
    "secondaryTextKey": "totalQtyFormatted",
    "text": "% of produced (primary unit)",
    "textKey": "scrapQtyPctFormatted",
    "type": "number",
    "valueKey": "scrapQtyPct",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "scrapaltqtypct",
    "secondaryTextKey": "totalAltQtyFormatted",
    "text": "% of produced (alternative unit)",
    "textKey": "scrapAltQtyPctFormatted",
    "type": "number",
    "valueKey": "scrapAltQtyPct",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "goodproduction",
    "isDurationValue": true,
    "isHidden": true,
    "secondaryTextKey": "goodDurPctFormatted",
    "text": "goodproduction",
    "textKey": "goodProduction",
    "type": "number",
    "valueKey": "goodProduction",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "scrapduration",
    "isDurationValue": true,
    "text": "Time lost",
    "textKey": "scrapDuration",
    "type": "number",
    "valueKey": "scrapDuration",
    "width": "120px",
  },
  {
    "appendText": " (Total)",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "rowplannedtime",
    "isDurationValue": true,
    "text": "plannedTime",
    "textKey": "rowPlannedTime",
    "type": "number",
    "valueKey": "rowPlannedTime",
    "width": "150px",
  },
  {
    "appendText": " (Total)",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "totalplannedtime",
    "isDurationValue": true,
    "text": "plannedTime",
    "textKey": "totalPlannedTime",
    "type": "number",
    "valueKey": "totalPlannedTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "entityPctPlannedTime",
    "text": "% of planned time",
    "textKey": "entityPctPlannedTimeLabel",
    "type": "number",
    "valueKey": "entityPctPlannedTime",
    "width": "170px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type SPEEDLOSS 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "performancecomment",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": "iconAsset",
    "relatedParam": "performanceCommentId",
    "secondaryId": "entityId",
    "style": {
      "width": "200px",
    },
    "text": "Speed loss reasons",
    "textKey": "entityName",
  },
  {
    "defaultDirection": "asc",
    "groupById": "entityid",
    "id": "performancelossgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "performanceCommentGroupId",
    "secondaryId": "entityGroupId",
    "text": "Speed loss groups",
    "textKey": "entityGroupName",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "performancelosslocation",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "performancePositionId",
    "text": "Machine locations",
    "textKey": "location",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "lotcode",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "lotCode",
    "secondaryId": "lotCode",
    "text": "LOT/Batch",
    "textKey": "lotCode",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productionorder",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "productionOrder",
    "secondaryId": "productionOrder",
    "text": "Orders",
    "textKey": "productionOrder",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "performancelosscount",
    "prependImage": null,
    "text": "stopcount",
    "textKey": "entityCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "notescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "performancelossnotescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "idealqty",
    "text": "Loss (primary unit)",
    "textKey": "lossQtyFormatted",
    "type": "number",
    "valueKey": "lossQty",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "hasTotal": true,
    "id": "idealaltqty",
    "text": "Loss (alternative unit)",
    "textKey": "lossAltQtyFormatted",
    "type": "number",
    "valueKey": "lossAltQty",
    "width": "120px",
  },
  {
    "align": "end",
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "performancelossduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Duration",
    "textKey": "valueSec",
    "type": "number",
    "valueKey": "valueSec",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average duration",
    "textKey": "avgDuration",
    "type": "number",
    "valueKey": "avgDuration",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "notes",
    "prependImage": null,
    "text": "Notes",
    "textKey": "notes",
    "type": "text",
    "width": "75px",
  },
]
`;

exports[`getTableHeadersConfig > returns correct snapshot for type TIME_USAGE 1`] = `
[
  {
    "defaultDirection": "asc",
    "id": "year",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Year",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "quarter",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Quarter",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "90px",
  },
  {
    "defaultDirection": "asc",
    "id": "weekofyear",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "month",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Month",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "dayofweek",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Day of the week",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "100px",
  },
  {
    "defaultDirection": "asc",
    "id": "date",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "date",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "starttime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "duetime",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "text": "Due time",
    "textKey": "tableTimeLabel",
    "type": "text",
    "valueKey": "xScaleValue",
    "width": "120px",
  },
  {
    "defaultDirection": "asc",
    "id": "station",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationId",
    "secondaryId": "stationId",
    "text": "Stations",
    "textKey": "station",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "stationgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "stationGroupId",
    "secondaryId": "stationGroupId",
    "text": "Station groups",
    "textKey": "stationGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "factory",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "factoryId",
    "secondaryId": "factoryId",
    "text": "Factories",
    "textKey": "factory",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "singleoperator",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "operatorId",
    "secondaryId": "singleOperator",
    "text": "operator",
    "textKey": "singleOperator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productgroup",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productGroupId",
    "text": "Product groups",
    "textKey": "productGroup",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "product",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "productId",
    "text": "products",
    "textKey": "product",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "sku",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "sku",
    "text": "Product code",
    "textKey": "skuLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "lotcode",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "lotCode",
    "secondaryId": "lotCode",
    "text": "LOT/Batch",
    "textKey": "lotCode",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "productionorder",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "relatedParam": "productionOrder",
    "secondaryId": "productionOrder",
    "text": "Orders",
    "textKey": "productionOrder",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "id": "shifttemplate",
    "isBold": [Function],
    "isFixed": [Function],
    "isLink": [Function],
    "prependImage": null,
    "secondaryId": "shiftTemplate",
    "text": "Shifts",
    "textKey": "shiftTemplateLabel",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "asc",
    "formatFn": [Function],
    "id": "operator",
    "prependImage": null,
    "relatedParam": "operatorId",
    "text": "Operators",
    "textKey": "operator",
    "type": "text",
    "width": "200px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "notescount",
    "isPopUp": [Function],
    "prependImage": null,
    "text": "Notes",
    "textKey": "notesCount",
    "type": "number",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "avgduration",
    "isDurationValue": true,
    "prependImage": null,
    "text": "Average duration",
    "textKey": "avgDuration",
    "type": "number",
    "valueKey": "avgDuration",
    "width": "150px",
  },
  {
    "defaultDirection": "asc",
    "id": "notes",
    "prependImage": null,
    "text": "Notes",
    "textKey": "notes",
    "type": "text",
    "width": "75px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "goodproduction",
    "isDurationValue": true,
    "secondaryTextKey": "goodDurPctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "goodproduction",
    "textKey": "goodProduction",
    "type": "number",
    "valueKey": "goodProduction",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "slowproduction",
    "isDurationValue": true,
    "secondaryTextKey": "slowPctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "Speed loss",
    "textKey": "slowProduction",
    "type": "number",
    "valueKey": "slowProduction",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "unplannedstop",
    "isDurationValue": true,
    "secondaryTextKey": "unplannedPctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "Unplanned stops",
    "textKey": "unplannedStop",
    "type": "number",
    "valueKey": "unplannedStop",
    "width": "170px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "uncommentedstop",
    "isDurationValue": true,
    "secondaryTextKey": "uncommentedPctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "Uncommented stop",
    "textKey": "uncommentedStop",
    "type": "number",
    "valueKey": "uncommentedStop",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "plannedstopincludedinoee",
    "isDurationValue": true,
    "secondaryTextKey": "plannedIncludedInOEEPctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "Planned stops (incl. in OEE)",
    "textKey": "plannedStopIncludedInOEE",
    "type": "number",
    "valueKey": "plannedStopIncludedInOEE",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "plannedstopnotincludedinoee",
    "isDurationValue": true,
    "secondaryTextKey": "plannedNotIncludedInOEEPctFormatted",
    "secondaryTextTooltip": "Shift time",
    "text": "Planned stops (excl. from OEE)",
    "textKey": "plannedStopNotIncludedInOEE",
    "type": "number",
    "valueKey": "plannedStopNotIncludedInOEE",
    "width": "120px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "operatingTime",
    "isDurationValue": true,
    "secondaryTextKey": "operatingTimePctFormatted",
    "secondaryTextTooltip": "plannedTime / Shift time",
    "text": "Operating time",
    "textKey": "operatingTime",
    "type": "number",
    "valueKey": "operatingTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "plannedtime",
    "isDurationValue": true,
    "text": "plannedTime",
    "textKey": "plannedTime",
    "type": "number",
    "valueKey": "plannedTime",
    "width": "150px",
  },
  {
    "defaultDirection": "desc",
    "formatFn": [Function],
    "hasTotal": true,
    "id": "shiftTime",
    "isDurationValue": true,
    "text": "Shift time",
    "textKey": "shiftTime",
    "type": "number",
    "valueKey": "shiftTime",
    "width": "150px",
  },
]
`;
